--- a/app/src/main/res/layout/dialog_zoom_image.xml
+++ b/app/src/main/res/layout/dialog_zoom_image.xml
@@ -29,11 +29,11 @@
             android:id="@+id/backImgView"
             android:layout_width="28dp"
             android:layout_height="0dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
             android:padding="4dp"
-            android:src="@drawable/left_arrow"
+            android:src="@drawable/left_arrow_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
             android:id="@+id/moreImgView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/more3"
             app:layout_constraintBottom_toBottomOf="@id/backImgView"
             app:layout_constraintDimensionRatio="1:1"
