--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -12,10 +12,8 @@
         app:cardCornerRadius="@dimen/sizeRoundCornerRadiusLayout">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxWidth="300dp"
-            android:minWidth="200dp">
+            android:layout_width="250dp"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/titleTextView"
@@ -34,6 +32,7 @@
                 tools:text="Titldsasaddsadsasdaasdasdasdasdasdasdsadsdae" />
 
             <TextView
+                android:textAlignment="center"
                 android:id="@+id/descTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
