--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -1,40 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:descendantFocusability="blocksDescendants"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:descendantFocusability="blocksDescendants">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:padding="12dp"
+            android:gravity="center"
             android:id="@+id/createNewGroupLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
-            android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
+                app:layout_constraintTop_toTopOf="@id/addGroupDescTextView"
+                app:layout_constraintBottom_toBottomOf="@id/addGroupDescTextView"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toStartOf="@id/addGroupDescTextView"
                 android:id="@+id/addGroupImgView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="32dp"
+                android:layout_height="0dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:src="@drawable/add" />
 
             <TextView
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textSize="@dimen/sizeTextBig"
                 android:id="@+id/addGroupDescTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="8dp"
                 android:text="@string/description_create_group" />
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
             android:id="@+id/divider1"
@@ -117,13 +128,27 @@
             app:layout_constraintTop_toBottomOf="@id/divider2" />
 
         <Spinner
+            android:background="@drawable/shape_round_corners_stroke"
             android:id="@+id/sortGroupSpinner"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="24dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:paddingStart="4dp"
+            android:paddingEnd="21dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider2" />
+            app:layout_constraintTop_toBottomOf="@id/divider2"
+            tools:listitem="@android:layout/simple_spinner_item" />
+
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="6dp"
+            android:src="@drawable/expand"
+            app:layout_constraintBottom_toBottomOf="@id/sortGroupSpinner"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="@id/sortGroupSpinner"
+            app:layout_constraintTop_toTopOf="@id/sortGroupSpinner" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
