--- a/app/src/main/res/drawable/shape_round_corners_stroke.xml
+++ b/app/src/main/res/drawable/shape_round_corners_stroke.xml
@@ -3,11 +3,11 @@
     <item>
         <shape>
             <solid android:color="@android:color/white"/>
-            <corners android:radius="@dimen/sizeRoundCornerRadiusLayout"
+            <corners android:radius="4dp"
                 />
             <stroke
                 android:width="1dp"
-                android:color="@color/lightAccent" />
+                android:color="@color/blackText" />
         </shape>
     </item>
 </selector>
