--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -18,7 +18,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <de.hdodenhof.circleimageview.CircleImageView
+                <ImageView
                     android:background="?attr/selectableItemBackground"
                     android:padding="16dp"
                     android:id="@+id/backImgView"
@@ -53,14 +53,15 @@
     </androidx.cardview.widget.CardView>
 
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/uploadAvatarImgView"
-        android:layout_width="@dimen/size_margin_recv_msg_item"
+        android:layout_width="56dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/description_avatar"
         android:src="@drawable/upload_picture"
+        android:background="@drawable/upload_picture"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardView" />
