--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -5,8 +5,6 @@
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
     tools:context=".views.activities.RoomActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -113,6 +111,20 @@
         app:layout_constraintBottom_toTopOf="@id/cardView"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:padding="4dp"
+        android:layout_margin="8dp"
+        app:riv_oval="true"
+        app:riv_mutate_background="true"
+        android:background="@color/blackText"
+        app:layout_constraintDimensionRatio="1:1"
+        android:src="@drawable/delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/cardView"
+        android:id="@+id/deleteRoomButton"
+        android:layout_width="40dp"
+        android:layout_height="0dp"/>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
@@ -144,14 +156,29 @@
                 android:layout_height="0dp"
                 android:background="?attr/selectableItemBackground"
                 android:contentDescription="@string/description_emoji_icon"
-                android:padding="8dp"
+                android:padding="10dp"
                 android:src="@drawable/emoji"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="h,1:1"
                 app:layout_constraintLeft_toLeftOf="parent" />
 
             <ImageView
-                android:id="@+id/uploadPictureImgView"
+                android:id="@+id/uploadVideoImgView"
+                android:layout_width="40dp"
+                android:layout_height="0dp"
+                android:background="?attr/selectableItemBackground"
+                android:contentDescription="@string/description_attach_picture_icon"
+                android:paddingLeft="6dp"
+                android:paddingTop="12dp"
+                android:paddingRight="6dp"
+                android:paddingBottom="12dp"
+                android:src="@drawable/video3"
+                app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+                app:layout_constraintEnd_toStartOf="@id/sendMsgImgView"
+                app:layout_constraintTop_toTopOf="@id/emojiImgView" />
+
+            <ImageView
+                android:id="@+id/uploadImageImgView"
                 android:layout_width="40dp"
                 android:layout_height="0dp"
                 android:background="?attr/selectableItemBackground"
@@ -162,15 +189,13 @@
                 android:paddingBottom="12dp"
                 android:src="@drawable/photo"
                 app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
-                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/uploadVideoImgView"
                 app:layout_constraintTop_toTopOf="@id/emojiImgView" />
 
             <ImageView
                 android:id="@+id/sendMsgImgView"
                 android:layout_width="40dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
                 android:background="?attr/selectableItemBackground"
                 android:contentDescription="@string/description_send_icon"
                 android:paddingLeft="6dp"
@@ -180,8 +205,7 @@
                 android:src="@drawable/send"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
-                app:layout_constraintLeft_toLeftOf="@id/uploadPictureImgView"
-                app:layout_constraintRight_toRightOf="@id/uploadPictureImgView"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/emojiImgView"
                 tools:visibility="visible" />
 
@@ -197,7 +221,7 @@
                 android:paddingBottom="12dp"
                 android:src="@drawable/mic"
                 app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
-                app:layout_constraintRight_toLeftOf="@id/uploadPictureImgView"
+                app:layout_constraintRight_toLeftOf="@id/uploadImageImgView"
                 app:layout_constraintTop_toTopOf="@id/emojiImgView" />
 
             <ImageView
@@ -223,4 +247,16 @@
         android:layout_height="320dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/viewImageLayout"
+        android:visibility="invisible"
+        tools:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <include
+            app:layout_constraintBottom_toBottomOf="parent"
+            layout="@layout/dialog_view_images"
+            />
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
