--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -141,12 +141,13 @@
             tools:listitem="@android:layout/simple_spinner_item" />
 
         <ImageView
-            android:layout_width="15dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="6dp"
-            android:src="@drawable/expand"
+            android:scaleType="fitXY"
+            android:rotation="270"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/left_arrow_black"
             app:layout_constraintBottom_toBottomOf="@id/sortGroupSpinner"
-            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="@id/sortGroupSpinner"
             app:layout_constraintTop_toTopOf="@id/sortGroupSpinner" />
 
