--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -25,6 +25,7 @@
             tools:src="@drawable/default_peer_avatar" />
 
         <TextView
+            app:layout_constraintVertical_chainStyle="packed"
             android:id="@+id/nameTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -42,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="@string/description_your_profile"
+            android:text="@string/description_view_your_profile"
             android:textColor="@color/lightTextGray"
             android:textSize="@dimen/size_small_text_10sp"
             app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
@@ -53,11 +54,10 @@
         <ImageView
             android:id="@+id/postStatusImgView"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="32dp"
             android:layout_marginEnd="16dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/description_post_status_image"
-            android:padding="8dp"
             android:src="@drawable/post_status"
             app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
             app:layout_constraintDimensionRatio="w,1:1"
