--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -55,20 +55,42 @@
         app:layout_constraintTop_toTopOf="@id/avatarImgView" />
 
     <TextView
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constrainedWidth="true"
         android:textSize="@dimen/sizeTextSmall"
-        android:layout_marginEnd="8dp"
-        tools:text="a very long messagessssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
+        android:layout_marginEnd="4dp"
+        tools:text="a very long messagessssssssssssssssssssssssssssssssssssssssss"
         android:scrollHorizontally="true"
         android:ellipsize="end"
         android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
         android:id="@+id/descTextView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toStartOf="@id/iconTextView"
+        app:layout_constraintEnd_toStartOf="@id/typingAnimView"
         app:layout_constraintStart_toStartOf="@id/nameTextView"
         app:layout_constraintTop_toBottomOf="@id/nameTextView" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@id/iconTextView"
+        tools:background="@color/strongGray"
+        android:id="@+id/typingAnimView"
+        android:layout_width="20dp"
+        android:layout_height="12dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toEndOf="@id/descTextView"
+        app:layout_constraintTop_toTopOf="@id/descTextView"
+        app:layout_constraintBottom_toBottomOf="@id/descTextView"
+        app:lottie_autoPlay="true"
+        app:lottie_enableMergePathsForKitKatAndAbove="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/typing"
+        app:lottie_renderMode="software"
+        tools:visibility="visible" />
 
     <TextView
         android:layout_marginEnd="8dp"
