--- a/app/src/main/res/layout/item_sticker.xml
+++ b/app/src/main/res/layout/item_sticker.xml
@@ -2,6 +2,7 @@
 <com.airbnb.lottie.LottieAnimationView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/animView"
+    android:scaleType="centerCrop"
     android:layout_width="48dp"
     android:layout_height="48dp"
     android:layout_margin="8dp"
